@@ -288,8 +288,8 @@ public abstract class GitAPITestUpdate {
          * JGit impl.
          */
         CliGitAPIImpl cgit() throws Exception {
-            if (git instanceof CliGitAPIImpl) {
-                return (CliGitAPIImpl) git;
+            if (git instanceof CliGitAPIImpl impl) {
+                return impl;
             }
             if (cachedCliGitAPIImpl != null) {
                 return cachedCliGitAPIImpl;
@@ -495,23 +495,24 @@ public abstract class GitAPITestUpdate {
     private void checkGetHeadRev(String remote, String branchSpec, ObjectId expectedObjectId) throws Exception {
         ObjectId actualObjectId = w.git.getHeadRev(remote, branchSpec);
         assertNotNull(
-                String.format(
-                        "Expected ObjectId is null expectedObjectId '%s', remote '%s', branchSpec '%s'.",
-                        expectedObjectId, remote, branchSpec),
+                "Expected ObjectId is null expectedObjectId '%s', remote '%s', branchSpec '%s'."
+                        .formatted(expectedObjectId, remote, branchSpec),
                 expectedObjectId);
         assertNotNull(
-                String.format(
-                        "Actual ObjectId is null. expectedObjectId '%s', remote '%s', branchSpec '%s'.",
-                        expectedObjectId, remote, branchSpec),
+                "Actual ObjectId is null. expectedObjectId '%s', remote '%s', branchSpec '%s'."
+                        .formatted(expectedObjectId, remote, branchSpec),
                 actualObjectId);
         assertEquals(
-                String.format(
-                        "Actual ObjectId differs from expected one for branchSpec '%s', remote '%s':\n"
-                                + "Actual %s,\nExpected %s\n",
-                        branchSpec,
-                        remote,
-                        StringUtils.join(getBranches(actualObjectId), ", "),
-                        StringUtils.join(getBranches(expectedObjectId), ", ")),
+                ("""
+                        Actual ObjectId differs from expected one for branchSpec '%s', remote '%s':
+                        Actual %s,
+                        Expected %s
+                        """)
+                        .formatted(
+                                branchSpec,
+                                remote,
+                                StringUtils.join(getBranches(actualObjectId), ", "),
+                                StringUtils.join(getBranches(expectedObjectId), ", ")),
                 expectedObjectId,
                 actualObjectId);
     }
@@ -1001,9 +1002,11 @@ public abstract class GitAPITestUpdate {
                 .execute();
         List<IndexEntry> r = w.git.getSubmodules("HEAD");
         assertEquals(
-                "[IndexEntry[mode=160000,type=commit,file=modules/firewall,object=978c8b223b33e203a5c766ecf79704a5ea9b35c8], "
-                        + "IndexEntry[mode=160000,type=commit,file=modules/ntp,object=b62fabbc2bb37908c44ded233e0f4bf479e45609], "
-                        + "IndexEntry[mode=160000,type=commit,file=modules/sshkeys,object=689c45ed57f0829735f9a2b16760c14236fe21d9]]",
+                """
+                [IndexEntry[mode=160000,type=commit,file=modules/firewall,object=978c8b223b33e203a5c766ecf79704a5ea9b35c8], \
+                IndexEntry[mode=160000,type=commit,file=modules/ntp,object=b62fabbc2bb37908c44ded233e0f4bf479e45609], \
+                IndexEntry[mode=160000,type=commit,file=modules/sshkeys,object=689c45ed57f0829735f9a2b16760c14236fe21d9]]\
+                """,
                 r.toString());
         w.git.submoduleInit();
         w.git.submoduleUpdate().execute();
@@ -1032,7 +1035,7 @@ public abstract class GitAPITestUpdate {
         boolean hasShallowSubmoduleSupport =
                 w.git instanceof CliGitAPIImpl && w.cgit().isAtLeastVersion(1, 8, 4, 0);
 
-        String shallow = Paths.get(".git", "modules", "submodule", "shallow").toString();
+        String shallow = Path.of(".git", "modules", "submodule", "shallow").toString();
         assertEquals("shallow file existence: " + shallow, hasShallowSubmoduleSupport, w.exists(shallow));
 
         int localSubmoduleCommits =
@@ -1060,7 +1063,7 @@ public abstract class GitAPITestUpdate {
         boolean hasShallowSubmoduleSupport =
                 w.git instanceof CliGitAPIImpl && w.cgit().isAtLeastVersion(1, 8, 4, 0);
 
-        String shallow = Paths.get(".git", "modules", "submodule", "shallow").toString();
+        String shallow = Path.of(".git", "modules", "submodule", "shallow").toString();
         assertEquals("shallow file existence: " + shallow, hasShallowSubmoduleSupport, w.exists(shallow));
 
         int localSubmoduleCommits =
@@ -2063,9 +2066,9 @@ public abstract class GitAPITestUpdate {
         WorkingArea submoduleWorkingArea = new WorkingArea(submoduleDir).init();
 
         for (int commit = 1; commit <= 5; commit++) {
-            submoduleWorkingArea.touch("file", String.format("submodule content-%d", commit));
+            submoduleWorkingArea.touch("file", "submodule content-%d".formatted(commit));
             submoduleWorkingArea.cgit().add("file");
-            submoduleWorkingArea.cgit().commit(String.format("submodule commit-%d", commit));
+            submoduleWorkingArea.cgit().commit("submodule commit-%d".formatted(commit));
         }
 
         WorkingArea repositoryWorkingArea = new WorkingArea(repositoryDir).init();
